--- a/AppCoder/template/home.html
+++ b/AppCoder/template/home.html
@@ -25,10 +25,13 @@
                 <a class="nav-link active" aria-current="page" href="/AppCoder/entregables">Entregables</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/AppCoder/estudiantes">Estudiantes</a>
+                <a class="nav-link active" aria-current="page" href="/AppCoder/read_estudiantes">Estudiantes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/AppCoder/profesores">Profesores</a>
+              </li>
+              <li class="nav-item" style="position: absolute; right: 2px">
+                <a class="nav-link active" aria-current="page" href="/AppCoder/logout">Salir</a>
               </li>
             </ul>
           </div>
