--- a/AppCoder/template/inicio.html
+++ b/AppCoder/template/inicio.html
@@ -104,6 +104,13 @@
           <li class="nav-item">
             <a class="nav-link disabled">Disabled</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/AppCoder/login/">INICIA SESION</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/AppCoder/registro/">REGISTRATE</a>
+          </li>
+         
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
