SUbida a la nube del proyecto  WebDjango CORREGIDA

--- a/AppCoder/template/home.html
+++ b/AppCoder/template/home.html
@@ -30,14 +30,14 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/AppCoder/profesores">Profesores</a>
               </li>
-              <li class="nav-item" style="position: absolute; right: 200px">
+              <li class="nav-item" style="position: absolute; right: 250px">
                 <img src="{{ avatar }}" width="40px">
               </li>
               <li class="nav-item" style="position: absolute; right: 100px">
-                <a class="nav-link active" aria-current="page" href="/AppCoder/perfil">{{ user.username }}</a>
+                <a class="nav-link active" aria-current="page" href="/AppCoder/perfil/">{{ user.username }}</a>
               </li>
               <li class="nav-item" style="position: absolute; right: 2px">
-                <a class="nav-link active" aria-current="page" href="/AppCoder/logout">Salir</a>
+                <a class="nav-link active" aria-current="page" href="/AppCoder/logout/">Salir</a>
               </li>
             </ul>
           </div>
